# deep-tech-radar

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py  storage.py  url.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: AllSubmissions.jsx  AskAI.jsx  FindCollaborators.jsx  SubmitProfile.jsx  TagInput.jsx  TeamRadar.jsx
