[project]
name = "deep-techradar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0",
    "fastapi>=0.136.1",
    "gradio>=4.44",
    "huggingface-hub>=0.23",
    "openai>=2.33.0",
    "pandas>=2.2",
    "plotly>=5.22",
    "pydantic>=2.13.3",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "uvicorn[standard]>=0.46.0",
]
